--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         <meta name="referrer" content="origin-when-cross-origin">
         <title>
 </title>
-      
+        <link rel="dns-prefetch" href="//gstatic.com">
+        <link rel="dns-prefetch" href="//google.com">
+        <link rel="dns-prefetch" href="//s.yimg.com">
         <link rel="dns-prefetch" href="//y.analytics.yahoo.com">
         <link rel="dns-prefetch" href="//ucs.query.yahoo.com">
         <link rel="dns-prefetch" href="//geo.query.yahoo.com">
